--- a/node/src/public/index.html
+++ b/node/src/public/index.html
@@ -11,7 +11,7 @@
         integrity="sha512-zN6KYOtONNTOGXz0RkWX2EpavN9VdIs+2w+To+fhciFv83YA9maUpi2lzZWrOfKXdFIZZomWufBznkyHi3a8oQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        const socket = io("http://localhost:4000");
+        const socket = io("http://10.0.0.11:4000");
 
         socket.on("new_message", (data) => console.log(data));
     </script>
